fixed double border on prefixed fields

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,18 +1,22 @@
 @import '../../vendor/filament/filament/resources/css/theme.css';
 
-.filament-collapse__collapse-item {
+.fi-input-wrp.filament-collapse__collapse-item {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
     var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
     calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
 }
 
-.filament-collapse__collapse-item:not(.filament-collapse__collapse-item-first) {
+.fi-input-wrp.filament-collapse__collapse-item:not(
+    .filament-collapse__collapse-item-first
+  ) {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 
-.filament-collapse__collapse-item:not(.filament-collapse__collapse-item-last) {
+.fi-input-wrp.filament-collapse__collapse-item:not(
+    .filament-collapse__collapse-item-last
+  ) {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   border-bottom-width: 1px;
